# znk-exercism

./: CODE_OF_CONDUCT.md  LICENSE  README.md
python/: README.md  get.py  pyproject.toml  pytest.ini
python/black-jack/: black_jack.py  pyproject.toml
python/black-jack/.exercism/: metadata.json
python/card-games/: lists.py  pyproject.toml
python/card-games/.exercism/: metadata.json
python/cater-waiter/: pyproject.toml  sets.py
python/cater-waiter/.exercism/: metadata.json
python/chaitanas-colossal-coaster/: list_methods.py  pyproject.toml
python/chaitanas-colossal-coaster/.exercism/: metadata.json
python/currency-exchange/: exchange.py  pyproject.toml
python/currency-exchange/.exercism/: metadata.json
python/ellens-alien-game/: classes.py  pyproject.toml
python/ellens-alien-game/.exercism/: metadata.json
python/ghost-gobble-arcade-game/: arcade_game.py  pyproject.toml
python/ghost-gobble-arcade-game/.exercism/: metadata.json
python/guidos-gorgeous-lasagna/: lasagna.py  pyproject.toml
python/guidos-gorgeous-lasagna/.exercism/: metadata.json
python/hello-world/.exercism/: metadata.json
python/inventory-management/: dicts.py  pyproject.toml
python/inventory-management/.exercism/: metadata.json
python/little-sisters-essay/: pyproject.toml  string_methods.py
python/little-sisters-vocab/: pyproject.toml  strings.py
python/making-the-grade/: loops.py  pyproject.toml
python/making-the-grade/.exercism/: metadata.json
python/meltdown-mitigation/: conditionals.py  pyproject.toml
python/tisbury-treasure-hunt/: pyproject.toml  tuples.py
(+32 files in other folders)
