[project]
name = "expy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Zhian N. Kamvar", email = "zkamvar@gmail.com" }
]
dependencies = [
    "tomlkit>=0.12.4",
    "pathlib>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]
[project.scripts]
get = "expy:get"

[tool.rye.workspace]
members = [
    ".",
    "meltdown-mitigation",
    "black-jack",
    "little-sisters-vocab",
    "card-games",
    "little-sisters-essay",
    "chaitanas-colossal-coaster",
    "making-the-grade",
    "tisbury-treasure-hunt",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/expy"]
